--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
   </target>
 
   <target name="run" depends="compile" description="run TankCommand">
-    <java classname="TC.Window" classpath="TankCommand/bin" />
+    <java fork="true" classname="TC.Window" classpath="TankCommand/bin" />
   </target>
 
   <target name="clean" description="delete unnecessary files and directories">
