--- a/build.xml
+++ b/build.xml
@@ -58,7 +58,7 @@
   </target>
   
   <target name="jar" description="Create an executable jar file">
-    <jar destfile="lib/TankCommand.jar"
+    <jar destfile="lib/TankCommand.jar">
     <fileset dir="TankCommand/bin/TC/"/>
     <zipfileset includes="*.class" "resources/images/*.png" "resources/images/*.jpg" "resources/sound/*.wav"/>
       <manifest>
