--- a/build.xml
+++ b/build.xml
@@ -58,10 +58,8 @@
   </target>
   
   <target name="jar" description="Create an executable jar file">
-    <jar destfile="lib/TankCommand.jar">
-    <fileset dir="TankCommand/bin/TC/"/>
-    <zipfileset includes="*.class,resources/images/*.png,resources/images/*.jpg,resources/sound/*.wav"/>
-      <manifest>
+    <jar destfile="lib/TankCommand.jar" basedir="TankCommand/bin/TC">
+      <manifest file="MANIFEST.mf">
         <attribute name="Window" value="TankCommand.bin.TC.Window"/>
       </manifest>
     </jar>
